fix#1013-made tooltip visible in topology view

--- a/karavan-web/karavan-app/src/main/webui/src/topology/topology.css
+++ b/karavan-web/karavan-app/src/main/webui/src/topology/topology.css
@@ -73,3 +73,7 @@
     pointer-events: none;
     opacity: 0.7;
 }
+.karavan .topology-sidebar .properties .pf-v5-c-form .pf-v5-c-form__group-label-help {
+    pointer-events: auto;
+    opacity: 1;
+}
